# makejinja

./: .gitignore  .pre-commit-config.yaml  .release-it.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  default.nix  flake.nix  flake.poetry2nix.nix  pyproject.toml  renovate.json  vhs.tape
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: autofix.yml  check.yml  ci.yaml  ci.yml  release.yml
assets/: demo.scenario  demo.tape  demo.txt  demo.txt.jinja
docs/: install.md  manpage.md  manpage.txt
makejinja/: __init__.py  __main__.py  app.py  cli.py  config.py  filters.py  globals.py  loader.py  plugin.py  types.py
pdoc-template/: syntax-highlighting.css  theme.css
src/makejinja/: __init__.py  app.py  cli.py  config.py  plugin.py
tests/: test_makejinja.py
tests/data/: .makejinja.toml  README.md  exports.py  filters.py  globals.py  loader.py  makejinja.toml  plugin.py
tests/data/baseline/views/: home.yaml
tests/data/config/: data.toml  data.yaml
tests/data/file-specific/: data1.yaml  data2.yaml
tests/data/input/: empty.yaml.jinja  ui-lovelace.yaml
tests/data/input/views/: home.yaml.jinja
tests/data/input1/: file-specific.yaml.jinja  not-empty.yaml.jinja  secret.yaml  ui-lovelace.yaml.jinja
tests/data/input1/empty-folder/: empty-folder.yaml.jinja
tests/data/input1/views/: home.yaml.jinja
tests/data/input2/: empty.yaml.jinja  include.yaml.partial  not-empty.yaml.jinja
tests/data/input2/views/: home.yaml.jinja
tests/data/input_1/: include.yaml.partial
tests/data/input_2/: extra_file.yaml
tests/data/output/: file-specific.yaml  not-empty.yaml  not_empty.yaml  ui-lovelace.yaml
tests/data/output/views/: home.yaml
tests/data_copytree/: .makejinja.toml  README.md
tests/data_copytree/input2/: example.txt.jinja
tests/data_copytree/output/: example.txt
