[project]
name = "makejinja"
version = "2.7.2"
description = "Generate entire directory structures using Jinja templates with support for external data and custom plugins"
authors = [{ name = "Mirko Lenz", email = "mirko@mirkolenz.com" }]
readme = "README.md"
keywords = [
    "jinja2",
    "home-assistant",
    "hassio",
    "dashboard",
    "lovelace",
    "template",
    "generator",
    "cli",
    "tool",
    "library",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3",
    "Topic :: File Formats",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
    "Topic :: System :: Systems Administration",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3,<4",
    "pyyaml>=6,<7",
    "rich-click>=1,<2",
    "typed-settings[attrs,cattrs,click]>=23,<25",
    "immutables>=0.20,<1",
]

[project.urls]
Repository = "https://github.com/mirkolenz/makejinja"
Homepage = "https://mirkolenz.github.io/makejinja/"
Documentation = "https://mirkolenz.github.io/makejinja/makejinja/cli.html"
Issues = "https://github.com/mirkolenz/makejinja/issues"
Changelog = "https://github.com/mirkolenz/makejinja/releases"

[project.scripts]
makejinja = "makejinja.cli:makejinja_cli"

[dependency-groups]
test = ["pytest>=8,<9", "pytest-cov>=6,<7"]
docs = ["pdoc>=15,<16"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv]
default-groups = ["test", "docs"]

[tool.pytest.ini_options]
addopts = "--cov makejinja --cov-report term-missing"

[tool.ruff]
target-version = "py311"
select = ["E", "W", "F", "B", "UP"]
ignore = ["E501"]

[tool.ruff.pydocstyle]
convention = "google"
